# blackjack

./: CMakeLists.txt  README.MD  hrac.c  hrac.h  krupier.c  krupier.h  main.c  oldGame.txt  otazky.rtf  otazky.txt  vypisy.c  vypisy.h
